assets/css/layout/_main.scss
/* ... */
.s1:hover ~ a {
  color: gold;
}

.s2:hover ~ a {
  color: gold;
}

.s3:hover ~ a {
  color: gold;
}

.s4:hover ~ a {
  color: gold;
}

.s5:hover ~ a {
  color: gold;
}


.text-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}


.input-group {
  &.w-100 {
    flex-wrap: nowrap;
  }
}

.fullscreen {
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  background-color: $background-color;
  display: flex;
  justify-content: center;
  align-items: center;
}

.fa {
  &.fa-star {
    color: gold;
  }
}

a:hover {
  .far {
    &.fa-star {
      color: gold;
    }
  }
}

.btn-darkred {
  color: #A10808;

  &:hover {
    color: lighten(#A10808, 10%);
  }

  &[class*='btn-outline'] {
    border-color: #A10808;

    &:hover {
      border-color: lighten(#A10808, 10%);
    }
  }
}

.btn {
  text-transform: none !important;
}

.with-help {
  .form-group {
    flex-grow: 1;
  }

  a {
    margin-left: 0.5rem;
  }
}

.profile {
  display: flex;
  //flex-direction: column;
  margin-right: 8px;

  .profileLine {
    display: flex;
    align-items: center;
    flex-direction: row;
    //margin-bottom: 0.2em;
    //margin-top: 1em;

    .icons {
      display: flex;
      gap: 5px;
      margin-right: 5px;
      font-weight: normal;
      align-items: stretch;

      .btn {
        height: 2.5em;
        aspect-ratio: 1/1;
        display: flex;
        align-items: center;
        justify-content: center;
        padding: 0;
        margin: 0;
        border-color: #dee2e6 !important;
        color: rgba(0, 0, 0, .5) !important;
        border-radius: 6px;

        &:hover {
          border-color: rgba(0, 0, 0, .4) !important;
        }

        i {
          font-size: 1em;
        }
      }
    }

    .picture {
      height: 2.5em;
      aspect-ratio: 1/1;
      object-fit: contain;
      position: relative;
      cursor: pointer;

      .pic-toggle {
        display: block;
        height: 100%;
        width: 100%;
      }

      img {
        object-fit: cover;
        height: 100%;
        width: 100%;
        border-radius: 6px;
        background-color: white;
      }

      .pic-content {
        border-radius: 6px;
      }

      .no-picture {
        font-size: 1.2em !important;
      }

      > .pic-toggle > .dot {
        position: absolute;
        bottom: -12%;
        right: -12%;
        width: 1em;
        height: 1em;
        border-radius: 6px;

        &.with-icon {
          &:before {
            font-size: 0.6em;
          }
        }
      }

      &.dropdown .dropdown-menu {
        right: 0;
        left: auto;
        max-height: none;
        overflow-y: visible;
      }

      .dropdown-divider {
        height: 0;
        margin: 6px 0;
        border: 0;
        border-top: 1px solid #dee2e6 !important;
        background-color: transparent;
        opacity: 1;
      }

      .dropdown-item.logout {
        display: flex;
        align-items: center;

        i {
          width: 8px;
          min-width: 8px;
          margin-right: 12px;
          text-align: center;
          font-size: 0.95em;
        }
      }
    }
  }
}

.nav-mat-tabs .nav-mat-item:hover {
  border-radius: 6px 6px 0 0 !important;
}

.nav-mat-link {
  display: flex !important;
  justify-content: center;
  align-items: center;
  font-size: 16px;

  span {
    margin-left: 1rem;
  }
}

.card {

  &.favorites {
    position: relative;
    background: none;

    &:after {
      display: none;
    }

    .card-background {
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      position: absolute;
      z-index: -2;
      margin: 0;
      background-color: $cardBackground_bright;
    }
  }
}

.showTime {
  position: absolute;
  bottom: -13px;
  align-self: center;
  font-size: small;
  border-radius: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1px 12px 1px 12px;
}

.bg-color {
  background-color: $background-color;
}

.modal-header {
  border-bottom: none;

  .modal-header {
    font-size: 1em;
    font-weight: 500;
    line-height: 2em;
  }
}

.modal-title {
  font-weight: 300;
  font-size: 1.3em;
}


.btn-close {
  background-color: transparent;
  background-image: none;
  display: flex;
  align-items: center;
  justify-content: center;
  color: inherit;

  opacity: 1;

  &:hover {
    color: inherit;
  }

  &:before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    font-size: 1.5em;
    content: "\f00d";
    line-height: 1.5em;
  }
}

.dot {
  box-sizing: content-box;
  border: 2px white solid;
}

.headerLine {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-right: 1em;
  text-align: center;
  display: none;
  @media only screen and (min-width: 992px) {
    display: block;
  }
}

.modal-footer {
  .btn {
    margin: 0;
  }
}

.form-control, .form-check-input, .form-select, .input-group-text {
  border-color: var(--color-button) !important;
  border-radius: 6px;
  border-width: 1px !important;

  &:focus, &:active, &:hover, &:checked {
    border-color: var(--color-button) !important;
    box-shadow: none !important;
  }
}

.form-check-input {
  border-radius: 4px;
}


.btn-outline-white {
  border-color: white;
  border-width: 1px !important;
  color: white;
}

.input-group {

  *:first-child {
    border-bottom-left-radius: 8px !important;
    border-top-left-radius: 8px !important;
  }

  *:last-child {
    border-bottom-right-radius: 8px !important;
    border-top-right-radius: 8px !important;
  }

  > :not(:first-child) {
    border-left: none;
  }

  .btn {
    border-width: 1px;
  }

  > :not(:last-child) {
    border-right-width: 1px;
  }

}


@keyframes removeSearchentry {
  0% {
    transform: translateX(0);
    height: auto;

  }
  50% {
    transform: translateX(100%);
    height: auto;
  }
  100% {
    transform: translateX(100%);
    height: 0;
  }
}
/* ... */

